<resources>
    <string name="app_name">HabitTracker</string>
    <string name="add_habit">Добавить новую привычку</string>
    <string name="color_habit">Цвет привычки</string>
    <string name="reveal_description">Раскрыть описание</string>
    <string name="high_priority">Высокий</string>
    <string name="normal_priority">Нормальный</string>
    <string name="small_priority">Низкий</string>
    <string name="bad_habit_type">Плохая</string>
    <string name="good_habit_type">Хорошая</string>
    <string name="habit_name_label">Имя привычки</string>
    <string name="description">Описание</string>
    <string name="bad_habit">Плохая привычка</string>
    <string name="good_habit">Хорошая привычка</string>
    <string name="numberRepetitions">Количество повторений</string>
    <string name="periodicity">Периодичность</string>
    <string name="priority">Приоритет</string>
    <string name="save">Сохранить</string>
    <string name="some_color">Some color</string>
    <string name="type">Тип</string>
    <string name="title_activity_navigation_activity">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="some_name">Какое либо имя</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="habits">Привычки</string>
    <string name="about_app">О приложении</string>
    <string name="app_description">Приложение для отслеживания привычек</string>
    <string name="good_habits">Хорошие привычки</string>
    <string name="bad_habits">Плохие привычки</string>
    <string name="submit">Подтвердить</string>
    <string name="filter_and_sorts">Фильтры и сортировки</string>
    <string name="sort_by_date">Сортировать по дате редактирования</string>
    <string name="sort_up_by_date">Сортировать вверх по дате</string>
    <string name="filtration">Фильтрация</string>
    <string name="done_habit">Выполнить!</string>
    <string name="good_small_done_message">Стоит выполнить это еще %1$s раз</string>
    <string name="bad_small_done_message">Вы можете выполнить это еще %1$s раз</string>
    <string name="good_ok_done_message">You are breathtaking</string>
    <string name="bad_ok_done_message">Хватит это делать!</string>
</resources>