<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_up"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/list_item_spacing_half"
    tools:context=".ui.fragments.ListSortsAndOrdersDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/filter_and_sorts"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sort_by_date" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sortUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/sort_up_by_date"
            android:src="@drawable/outline_arrow_upward_24"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sortDownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/sort_up_by_date"
            android:src="@drawable/outline_arrow_downward_24"
            app:fabSize="mini" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:labelFor="@id/filterTextView"
        android:text="@string/filtration" />

    <EditText
        android:id="@+id/filterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="text"
        android:maxLines="1" />

</LinearLayout>