<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/habitColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/color_habit"
        android:src="@color/black" />

    <TextView
        android:id="@+id/habitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxLength="35"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/habitColor"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name of habit!" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodicity"
        app:layout_constraintBottom_toBottomOf="@+id/habitColor"
        app:layout_constraintStart_toStartOf="@+id/habitName"
        app:layout_constraintTop_toBottomOf="@+id/habitName" />

    <TextView
        android:id="@+id/habitPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/habitColor"
        app:layout_constraintEnd_toStartOf="@+id/detailsButton"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/habitName"
        tools:text="Mon, The, Thu, Wen, Fri, Sat, Sun" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/habitDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="description, details_layout"
        android:visibility="gone"
        tools:visibility="visible"/>

    <GridLayout
        android:id="@+id/details_layout"
        android:useDefaultMargins="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/priority" />

        <TextView
            android:id="@+id/habitType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            tools:text="Хорошая/Плохая" />

        <TextView
            android:id="@+id/habitPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            tools:text="Нормальный" />

    </GridLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_layout"
        tools:text="Description" />

    <ImageView
        android:id="@+id/detailsButton"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/round_keyboard_arrow_down_black_18"
        app:layout_constraintBottom_toBottomOf="@+id/habitColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/reveal_description" />

</androidx.constraintlayout.widget.ConstraintLayout>